# beliq-sdk-python

./: .gitignore  LICENSE  README.md  openapi.json  pyproject.toml
.github/workflows/: ci.yml  release.yml  spec-drift.yml
scripts/: check_live_drift.py  sync_spec.py
src/beliq/: __init__.py  _build_request.py  _internal.py  client.py  constants.py  errors.py  types.py
tests/: test_build_request.py  test_client.py  test_constants.py  test_integration.py  test_spec_contract.py
tests/fixtures/: error-invalid-xml.json  me.json  parse.json  validate-invalid.json
