[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beliq"
version = "0.1.0"
description = "Official beliq SDK: generate, validate, parse, and convert EU-compliant e-invoices (XRechnung, ZUGFeRD, Factur-X, Peppol BIS) against authority-pinned, drift-checked rules."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "beliq", email = "hello@beliq.eu" }]
keywords = ["beliq", "e-invoice", "einvoice", "xrechnung", "zugferd", "factur-x", "peppol", "en16931", "compliance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = ["httpx>=0.27", "pydantic>=2"]

[project.urls]
Homepage = "https://beliq.eu"
Repository = "https://github.com/beliq-eu/beliq-sdk-python"
Issues = "https://github.com/beliq-eu/beliq-sdk-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/beliq"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/beliq"]
